# focus-pager

./: .gitignore  README.md
firmware/: CMakeLists.txt  diagram.json  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.simulator  wokwi.toml
firmware/main/: CMakeLists.txt  Kconfig.projbuild  ancs_client.c  ancs_client.h  brick_service.c  brick_service.h  encoder.c  encoder.h  hfp_client.c  hfp_client.h  idf_component.yml  main.c  notif_store.c  notif_store.h  pager_state.c  pager_state.h  ui.c  ui.h
ios-companion/: README.md
ios-companion/FocusPager/: AuthService.swift  BrickProtocol.swift  ContentView.swift  FocusPagerApp.swift  Info.plist  PagerConnection.swift  ShieldManager.swift
ios-companion/FocusPager.xcodeproj/: project.pbxproj
ios-companion/FocusPager.xcodeproj/project.xcworkspace/xcuserdata/chenjiani.xcuserdatad/: UserInterfaceState.xcuserstate
ios-companion/FocusPager.xcodeproj/xcuserdata/chenjiani.xcuserdatad/xcschemes/: xcschememanagement.plist
protocol/: brick-control.md
