idf_component_register(
    SRCS
        "main.c"
        "ancs_client.c"
        "brick_service.c"
        "encoder.c"
        "hfp_client.c"
        "notif_store.c"
        "pager_state.c"
        "ui.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        nvs_flash
        bt
        esp_common
        esp_lcd
        driver
        esp_driver_i2s
        mbedtls
        esp_timer
        lvgl
        esp_lvgl_port
)
